test/libyul/yulSyntaxTests/objects/empty_data.yul
object "A" {
  data "tmp" ""
}
// ----
// ParserError 2314: (15-19): Expected 'code' but got identifier
